# dotfiles-ansible

./: .env  .gitignore  Dockerfile  Makefile  README.md  ansible.cfg  galaxy.yml  pyproject.toml
inventory/envs/docker/: inventory_molecule.yml
inventory/envs/docker/group_vars/: all.yml
inventory/envs/docker/host_vars/: my-laptop.yml
inventory/envs/localhost/: inventory_localhost.yml
inventory/envs/localhost/group_vars/: laptops.yml
inventory/envs/localhost/host_vars/: my-laptop.yml
molecule/scenario-docker/: Dockerfile  converge.yml  molecule.yml
playbooks/: my_playbook.yml
roles/fzf/tasks/: main.yml
roles/kitty/defaults/: main.yml
roles/kitty/handlers/: main.yml
roles/kitty/tasks/: main.yml
roles/kitty/tests/: test.yml
roles/kitty/vars/: main.yml
roles/nvim/defaults/: main.yml
roles/nvim/tasks/: main.yml
roles/tmux/tasks/: main.yml
roles/tools/tasks/: main.yml
roles/zsh/tasks/: main.yml
scripts/: linux-easy-setup-python.sh  mac-easy-setup-python.sh
vars/: common.yml
