[tool.poetry]
name = "ansible-laptop"
version = "0.1.0"
description = ""
authors = ["William Lenoir"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^9.3.0"
molecule = "^24.2.0"
molecule-plugins = {extras = ["docker"], version = "^23.5.3"}
pexpect = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
